# monoxide

./: .editorconfig  .gitignore  .gitmodules  .oxfmtrc.json  .prettierrc.json5  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: page.yml  test.yml
assets/: R_.glif
crates/monoxide-curves/: Cargo.toml
crates/monoxide-curves/src/: convert.rs  cube.rs  debug.rs  error.rs  lib.rs  point.rs  quad.rs  spiro.rs  stroke.rs  xform.rs
crates/monoxide-curves/src/convert/: cube_to_quad.rs  spiro_to_cube.rs
crates/monoxide-curves/src/cube/: compat.rs  exchange.rs
crates/monoxide-curves/src/stroke/: mod.rs  tangents.rs  widths.rs
crates/monoxide-font/: Cargo.toml
crates/monoxide-font/examples/: playground.rs
crates/monoxide-font/src/: compile.rs  font.rs  glyph.rs  lib.rs  main.rs  playground.rs  web.rs
crates/monoxide-font/src/font/: dir.rs  glyph.rs  math.rs  mod.rs  prelude.rs  settings.rs  shape.rs
crates/monoxide-font/src/font/glyph/: a.rs  b.rs  c.rs  d.rs  digit.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  space.rs  sym.rs  t.rs  test.rs  tofu.rs  u.rs  v.rs  w.rs  x.rs  y.rs  z.rs
crates/monoxide-font/src/font/glyph/digit/: one.rs  zero.rs
crates/monoxide-font/src/font/glyph/sym/: slash.rs  tofu.rs
crates/monoxide-font/src/font/glyph/test/: svg.rs
crates/monoxide-font/src/glyph/: a.rs  b.rs  c.rs  d.rs  digit.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  test.rs  u.rs  v.rs  w.rs  x.rs  y.rs  z.rs
crates/monoxide-font/src/glyph/digit/: four.rs  nine.rs  one.rs  seven.rs  six.rs  zero.rs
crates/monoxide-font/src/glyph/sym/: slash.rs  tofu.rs
crates/monoxide-font/src/glyph/test/: svg.rs
crates/monoxide-font/src/web/: glyph_detail.rs  ws.rs
crates/monoxide-playground/: Cargo.toml
crates/monoxide-playground/assets/: glyph.html.rsstr  index.html.rsstr
crates/monoxide-playground/src/: lib.rs  main.rs  model.rs  svg.rs  web.rs
crates/monoxide-playground/src/web/: font.rs  glyph_detail.rs  ws.rs
crates/monoxide-script/: Cargo.toml
crates/monoxide-script/src/: ast.rs  curves.rs  dsl.rs  eval.rs  lib.rs  prelude.rs  trace.rs  util.rs  utils.rs
crates/monoxide-script/src/ast/: compound.rs  simple.rs
crates/monoxide-script/src/dsl/: bezier_builder.rs  mod.rs  spiro_builder.rs
crates/monoxide-script/src/eval/: glyphs.rs  layout.rs  outline.rs
crates/monoxide-script/src/js/: bezier_builder.rs  glyph_factory.rs  mod.rs  outline_expr.rs  spiro_builder.rs
crates/monoxide-spiro/: Cargo.toml
crates/monoxide-spiro/src/: bez.rs  lib.rs
crates/monoxide-spiro/tests/: to_bez.rs
crates/monoxide-spiro/tests/snapshots/: to_bez__spiro_to_beziers.snap  to_bez__spiro_to_beziers_ring.snap
crates/monoxide-ttf/: Cargo.toml  readme.md
crates/monoxide-ttf/examples/: test-font-gen.rs
crates/monoxide-ttf/src/: lib.rs
crates/monoxide-ttf/src/curve/: convert.rs  cube.rs  mod.rs  quad.rs
crates/monoxide-ttf/src/hl/: cmap.rs  glyf.rs  loca.rs  maxp.rs  mod.rs
crates/monoxide-ttf/src/hl/glyf/: test.rs
crates/monoxide-ttf/src/model/: cff2.rs  cmap.rs  dsig.rs  encoding.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs
crates/monoxide-ttf/src/model/cff2/: inst.rs  num.rs
crates/monoxide-ttf/src/model/cmap/: fmt12.rs  fmt4.rs  raw.rs
crates/monoxide-ttf/src/model/glyf/: compound.rs  simple.rs
crates/monoxide-ttf/src/model/name/: gen_lang_id_ms.py  lang_id_ms.rs  lang_id_ms.txt
crates/monoxide-ttf/src/util/: mod.rs
crates/sirop/: Cargo.toml  README.md
crates/sirop/src/: bez.rs  error.rs  lib.rs  spiro.rs
crates/sirop/src/bez/: strand.rs
crates/sirop/src/spiro/: arc.rs  k.rs
crates/sirop/tests/: to_bez.rs
crates/sirop/tests/snapshots/: to_bez__bezier.snap
font/: const.js  eslint.config.mjs  index.js  math.js  outline.js  package.json  point.js  shape.js  tsconfig.json  util.js
font/glyph/: c.js  i.js  n.js  o.js  s.js
js-pkgs/monoxide/: index.d.ts  package.json
repros/issue-158-hmr/: Cargo.toml  README.md
repros/issue-158-hmr/crates/mini-font/: Cargo.toml
repros/issue-158-hmr/crates/mini-font/examples/: playground.rs
repros/issue-158-hmr/crates/mini-font/src/: lib.rs
repros/issue-158-hmr/crates/mini-playground/: Cargo.toml
repros/issue-158-hmr/crates/mini-playground/src/: lib.rs
repros/issue-158-hmr/src/: main.rs
src/: main.rs
tools/: fontvalidator_report.py  ttf-verify.py
tools/playground/: .gitignore  eslint.config.js  index.html  package.json  vite.config.ts
tools/playground/src/: App.vue  main.ts  style.css  vite-env.d.ts
tools/playground/src/api/: api.ts
tools/playground/src/components/: GlobalErrorOverlay.vue  GlyphDisplay.vue  NavBar.vue
tools/playground/src/components/svg/: SvgCanvas.vue  SvgDebugPoint.vue  SvgDirection.vue  SvgGuidelines.vue  SvgPath.vue  debugPoints.ts  types.ts  util.ts
tools/playground/src/lib/: api.ts  state.ts  types.ts  util.ts
tools/playground/src/pages/: 404.vue  404Page.vue  Compare.vue  ComparePage.vue  Glyph.vue  GlyphPage.vue  Overview.vue  OverviewPage.vue
xtask/: Cargo.toml
xtask/src/: dev.rs  main.rs  ssg.rs  util.rs
