[package]
name = "monoxide"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/rami3l/monoxide"
repository = "https://github.com/rami3l/monoxide"
readme = "README.md"

[dependencies]

[build-dependencies]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"

[workspace]
members = [
    ".",
    "crates/monoxide-curves",
    "crates/monoxide-font",
    "crates/monoxide-script",
    "crates/monoxide-spiro",
    "crates/monoxide-ttf",
    "xtask",
]

[workspace.dependencies]
# Monoxide itself
monoxide-curves = { path = "crates/monoxide-curves" }
monoxide-script = { path = "crates/monoxide-script" }
monoxide-spiro = { path = "crates/monoxide-spiro" }
monoxide-ttf = { path = "crates/monoxide-ttf" }
monoxide = { path = "." }
# Deps
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dunce = "1.0.5"
flo_curves = { git = "https://github.com/Pangpang-Studio/flo_curves.git", branch = "dev" }
glob = "0.3"
num-traits = "0.2.19"
path-slash = "0.2.1"
rquickjs = { version = "0.9.0", features = ["macro", "loader"] }
serde = { version = "1", features = ["derive"] }
spiro-sys = { package = "spiro-sys-rs", git = "https://github.com/Pangpang-Studio/spiro-sys-rs.git", version = "0.1.0" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0"
