[package]
name = "xtask"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc = "3.5.0"
scopeguard = "1.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"
