[package]
name = "monoxide-curves"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
flo_curves.workspace = true
monoxide-spiro.workspace = true
num-traits.workspace = true
serde.workspace = true
itertools.workspace = true
