[package]
name = "monoxide-font"
version = "0.1.0"
edition = "2024"

[features]
playground = []

[dependencies]
monoxide-curves.workspace = true
monoxide-script.workspace = true
monoxide-spiro.workspace = true

[dev-dependencies]
anyhow.workspace = true
dioxus-devtools.workspace = true
tokio.workspace = true
monoxide-playground.workspace = true

[[example]]
name = "playground"
# HACK: To make `subsecond` aware of `font.rs`, we have to put it under `src/`.
path = "src/playground.rs"
required-features = ["playground"]

[[example]]
name = "compile"
path = "src/compile.rs"
