[package]
name = "monoxide-font"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
playground = []

[dependencies]
monoxide-curves.workspace = true
monoxide-script.workspace = true
monoxide-spiro.workspace = true

[dev-dependencies]
anyhow.workspace = true
dioxus-devtools.workspace = true
tokio.workspace = true
monoxide-playground.workspace = true

[[example]]
name = "playground"
# HACK: To make `subsecond` aware of `font.rs`, we have to put it under `src/`.
path = "src/playground.rs"
required-features = ["playground"]
