[package]
name = "monoxide-font"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
playground = []

[dependencies]
monoxide-curves.workspace = true
monoxide-script.workspace = true
monoxide-spiro.workspace = true

[dev-dependencies]
anyhow.workspace = true
dioxus-devtools.workspace = true
monoxide-playground.workspace = true
tokio.workspace = true
