[package]
name = "monoxide-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-reverse-proxy = "0.8.0"
clap.workspace = true
dioxus-devtools.workspace = true
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
monoxide-curves.workspace = true
monoxide-script.workspace = true
monoxide-spiro.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6", features = ["fs"] }
