[package]
name = "monoxide-script"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
monoxide-curves.workspace = true
monoxide-spiro.workspace = true
monoxide-ttf.workspace = true
serde.workspace = true
thiserror.workspace = true
indexmap.workspace = true
petgraph.workspace = true
