[package]
name = "monoxide-script"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
by_address.workspace = true
indexmap.workspace = true
itertools.workspace = true
monoxide-curves.workspace = true
monoxide-spiro.workspace = true
monoxide-ttf.workspace = true
petgraph.workspace = true
serde.workspace = true
thiserror.workspace = true
