[package]
name = "monoxide-ttf"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
monoxide-curves.workspace = true
bitflags = "2.9.4"
bytes = "1.9.0"
fixed = "=1.29.0"
indexmap = "2.11.1"
num-traits.workspace = true
rust_decimal = { version = "1.36.0", default-features = false }
thiserror.workspace = true
widestring = "1.1.0"
