[package]
name = "monoxide-ttf"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
monoxide-curves.workspace = true
bitflags = "2.10.0"
bytes = "1.11.1"
fixed = "=1.30.0"
indexmap = "2.13.0"
num-traits.workspace = true
rust_decimal = { version = "1.40.0", default-features = false }
thiserror.workspace = true
widestring = "1.2.1"
