[package]
name = "monoxide-ttf"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
monoxide-curves.workspace = true
bitflags = "2.12.1"
bytes = "1.11.1"
fixed = "1.31.0"
indexmap = "2.14.0"
num-traits.workspace = true
rust_decimal = { version = "1.42.0", default-features = false }
tempfile = "3.27.0"
thiserror.workspace = true
tilvisan = "0.1.0"
widestring = "1.2.1"
